force-app/main/default/objects/properties__c/properties__c.object-meta.xml
<CustomObject>
    <label>Propertie</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>