force-app/main/default/objects/properties__c/fields/Adress__c.field-meta.xml
<CustomField>
    <fullName>Adress__c</fullName>
    <label>Address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>