force-app/main/default/objects/properties__c/fields/Neighborhood__c.field-meta.xml
<CustomField>
    <fullName>Neighborhood__c</fullName>
    <label>Neighborhood</label>
    <length>155</length>
    <type>Text</type>
</CustomField>