force-app/main/default/objects/properties__c/fields/Terreno__c.field-meta.xml
<CustomField>
    <fullName>Terreno__c</fullName>
    <label>LandArea</label>
    <length>155</length>
    <type>Text</type>
</CustomField>