force-app/main/default/objects/properties__c/fields/TotalArea__c.field-meta.xml
<CustomField>
    <fullName>TotalArea__c</fullName>
    <label>TotalArea</label>
    <length>155</length>
    <type>Text</type>
</CustomField>