force-app/main/default/objects/properties__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TotalArea__c</columns>
    <columns>Price__c</columns>
    <columns>Neighborhood__c</columns>
    <columns>Terreno__c</columns>
    <columns>Description__c</columns>
    <columns>City__c</columns>
    <columns>Adress__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>